fix alignment.

--- a/wwr/coolpics/coolpics.css
+++ b/wwr/coolpics/coolpics.css
@@ -11,6 +11,7 @@
  body {
     font-family: var(--primary-font);
     font-size: 1.2em;
+    margin: 0;
   }
   a:link,
   a:visited {
@@ -31,6 +32,7 @@ ul {
     justify-content: center;
     font-size: 20px;
     gap: 100px;
+    padding: 0;
 }
 ul li a {
     color: white; 
@@ -53,11 +55,14 @@ h1 {
     color: white;
     font-size: 40px;
     margin-left: 50px;
+    margin-top: 0;
 }
 h2 {
     text-align: center;
     color: black;
     font-size: 25px;
+    padding-top: 15px;
+    margin-top: 0;
 }
 footer p {
     justify-content: center;
@@ -78,7 +83,7 @@ footer p {
     background: none; 
     border: none; 
     color: white; 
-    font-size: 16px; 
+    font-size: 26px; 
     cursor: pointer; 
     padding: 0; 
     text-align: left; 
@@ -106,6 +111,16 @@ footer p {
         font-size: 20px;
         gap: 100px;
     }
+    .menu-button {
+        background: none;
+        border: none;
+        color: white;
+        font-size: 26px;
+        cursor: pointer;
+        padding: 5;
+        text-align: center;
+        
+    }
 
   }
 @media screen and (max-width: 700px) {
@@ -114,14 +129,25 @@ footer p {
       justify-content: center;
     }
     .gallery figure {
-        width: 100%; /* Ensure the figure takes full width of the gallery column */
-        max-width: 100%; /* Prevent figure from becoming wider than its container */
+       /* width: 100%; /* Ensure the figure takes full width of the gallery column */
+         /* max-width: 100%; /* Prevent figure from becoming wider than its container */
         display: flex;
         justify-content: center; /* Center the image horizontally */
         align-items: center;
+        margin: 0;
       }
     .nav-links {
         display: none; 
+    }
+    .menu-button {
+        background: none;
+        border: none;
+        color: white;
+        font-size: 26px;
+        cursor: pointer;
+        padding: 5px;
+        text-align: center;
+        
     }
   }
   @media screen and (min-width: 1000px) {
